# AlgorithmicDesignHomeworks

./: README.md
BinaryHeap/: CMakeLists.txt  build.sh
BinaryHeap/include/: heap.h
BinaryHeap/src/: heap.c  main.c
ChainMatrixMultiplication/: CMakeLists.txt
Dijkstra/: CMakeLists.txt
Dijkstra/include/: dijkstra.h  graph.h  stack.h  utilities.h
Dijkstra/src/: dijkstra.c  graph.c  main.c  utilities.c
SortingAlgorithms/: CMakeLists.txt
SortingAlgorithms/include/: heapify.h  macro.h  sort.h  utilities.h  vector.h
SortingAlgorithms/src/: heapify.c  main.c  sort.c  utilities.c  vector.c
Strassen/: CMakeLists.txt  main.c  matrix.h  strassen.c  strassen.h
